--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "handlebars-boilerplate",
   "version": "1.0.0",
   "description": "Project 2 Starter",
   "main": "server.js",
@@ -25,5 +25,17 @@
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neilfr/scorekeeper.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/neilfr/scorekeeper/issues"
+  },
+  "homepage": "https://github.com/neilfr/scorekeeper#readme"
 }
