removed some extra comments and console logs

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "root",
-    "database": "hockeydb",
+    "database": "scorekeeper",
     "host": "localhost",
     "dialect": "mysql"
   },
