--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express-handlebars": "^3.0.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.4",
-    "sequelize": "^4.41.2"
+    "sequelize": "^4.41.2",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
